--- a/todos.org
+++ b/todos.org
@@ -4,3 +4,5 @@
 * TODO measurements => right input for pid_controller
 ** TODO adjust the simulation
 * TODO right duty cylcle
+
+* Install pybluez with pip install git+https://github.com/pybluez/pybluez.git#egg=pybluez
